# rss-digest

./: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  claude.md  pyproject.toml  setup_database.sql  test_setup.py
.github/workflows/: weekly_digest.yml
config/: __init__.py  feeds.py  rss_feeds.py
src/: __init__.py  database.py  email_sender.py  llm_processor.py  main.py  rss_fetcher.py
templates/: email_template.html  example.html
